    o #662654 by dereine: Do not use query to load/validate a user if the user happens to be the logged in user.
    o #640862 by dereine: Properly clear feed icon when cloning a view to prevent duplicate feed icons in attachments.
    o #672044 by moshebeeri: Right-To-Left for views.css.
    o #677936 by mr.baileys: "views-row-last" class accidentally omitted on grids with just one row.

  Other changes:
    o #570558 by yhahn: Segment default views caching to conserve memory used by Views during normal operation.
    o #661676 by dagmar: Improve error handling during AJAX failures.
    o #685622 by dereine: Field to provide link to a node revision.
    o #484600 by dereine: Ability to disable the automatic live preview.
    o #716236 by jmiccolis: Allow default menu tabs to also have menu entries.
    o #550132 by tha_sun: Allow plugins to better control the callbacks used for page type displays.
    o #548292 by mikeker: Create a "Node: path" field that can be used to display the aliased path to a node.
    o #666912 by dereine: Prevent imports of views created by newer, incompatible versions of Views.
    o #672864 by dereine: Add a column count class to the table style for themers to more easily do generic targeting.
    o #552498 by dereine: User email as an argument.
    o #515324 by dereine: Make API documentation easier to find.
    o #488314 by yhahn: Allow relationship to fetch nodes from terms.

Views 2.8 (Dec 02, 2009)
  Bug fixes:
    o #622602: Missing ORDER BY in some views with tables due to incorrect test for default table sorting.
    o #623498 by marcp: total_rows should be filled in if fetching all records.
    o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
    o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
    o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3