@@ -1,5 +1,5 @@
 <?php
-// $Id: cache.inc,v 1.25.2.3 2010-03-10 20:24:14 merlinofchaos Exp $
+// $Id: cache.inc,v 1.25.2.4 2010-03-12 01:51:47 merlinofchaos Exp $
 /**
  * @file cache.inc
  *
@@ -100,7 +100,7 @@ function _views_discover_default_views() {
   static $cache = NULL;
 
   if (!isset($cache)) {
-    $index = views_cache_get('views_default_views_index');
+    $index = views_cache_get('views_default_views_index', TRUE);
 
     // Retrieve each cached default view
     if (isset($index->data) && is_array($index->data)) {
@@ -141,7 +141,7 @@ function _views_discover_default_views() {
 
       // Cache the index
       $index = array_keys($cache);
-      views_cache_set('views_default_views_index', $index);
+      views_cache_set('views_default_views_index', $index, TRUE);
 
       // Cache each view
       foreach ($cache as $name => $view) {
