@@ -43,6 +43,7 @@ Views 2.x-dev
     o #640862 by dereine: Properly clear feed icon when cloning a view to prevent duplicate feed icons in attachments.
     o #672044 by moshebeeri: Right-To-Left for views.css.
     o #677936 by mr.baileys: "views-row-last" class accidentally omitted on grids with just one row.
+    o #673184 by markus petrux: Default views not always properly loaded by language.
 
   Other changes:
     o #570558 by yhahn: Segment default views caching to conserve memory used by Views during normal operation.
@@ -57,6 +58,7 @@ Views 2.x-dev
     o #552498 by dereine: User email as an argument.
     o #515324 by dereine: Make API documentation easier to find.
     o #488314 by yhahn: Allow relationship to fetch nodes from terms.
+    o #685938 by dereine: Sync preview widget to current tab to reduce WTFs when previewing the wrong display.
 
 Views 2.8 (Dec 02, 2009)
   Bug fixes:
